integrated nested attributes for portfolio model

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -19,6 +19,11 @@
     <%= form.text_area :body %>
   </div>
 
+ <!--    <div class="field">
+    <%#= form.label :technology_id %>
+    <%#= form.select :technology_id.map {|t| [:technology_id,:technology.title]} %>
+  </div> -->
+
   <div class="actions">
     <%= form.submit %>
   </div>
