--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,39 +1,12 @@
 <h1>Create a new Portfolio item</h1>
 
-<%#=form_with(model: #Portfolio, local: true) #do |form| %>
-<%= form_for(@portfolio_item) do |form| %>
-  
+  <%= render "form", portfolio_item: @portfolio_item %>
+ 
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :subtitle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
 
  <!--    <div class="field">
     <%#= form.label :technology_id %>
     <%#= form.select :technology_id.map {|t| [:technology_id,:technology.title]} %>
   </div> -->
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+
