Implemented authorization engine for portfolio items and blogs

--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -2,5 +2,5 @@
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <p><%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
-<p> <%= link_to("Edit", edit_portfolio_path(portfolio_item.id)) %> </p>
-<%= link_to "Delete portfolio item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?'} %>
+<p> <%= link_to("Edit", edit_portfolio_path(portfolio_item.id)) if current_user?(:site_admin)%> </p>
+<%= link_to "Delete portfolio item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?'} if current_user?(:site_admin)%>
