--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,7 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .masthead-brand {
@@ -92,7 +93,7 @@ body {
  * Cover
  */
 .cover {
-  padding: 0 1.5rem;
+  padding: 12.5rem 1.5rem;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
