--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">About page</h1>
+  <p class="lead">
+    Here you can read everything you want to know about me.
+  </p>
+</main>
