--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Contant me</h1>
+  <p class="lead">
+    <%= number_to_phone "5555555555" %>
+  </p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.9546755275687!2d20.388858615782148!3d44.84285638270719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a65b8a24dca25%3A0x6cca198819044eaa!2zTWnEh2UgUmFkYWtvdmnEh2EsIEJlb2dyYWQ!5e0!3m2!1sen!2srs!4v1531565137974" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</main>
