--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,6 +1,24 @@
-<p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<p><%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %></p>
-<p> <%= link_to("Edit", edit_portfolio_path(portfolio_item.id)) if current_user?(:site_admin)%> </p>
-<%= link_to "Delete portfolio item", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?'} if current_user?(:site_admin)%>
+<p>
+  <%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %>
+</p>
+
+<p>
+  <%= portfolio_item.subtitle %>    
+</p>
+
+<p>
+  <%= portfolio_item.body %>
+</p>
+
+<p>
+  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+</p>
+
+<p>
+  <%= link_to("Edit", edit_portfolio_path(portfolio_item.id)) if logged_in?(:site_admin) %> 
+</p>
+<!-- logged_in? a ne current_user? -->
+<%=
+ link_to "Delete portfolio item", portfolio_path(portfolio_item.id),
+ method: :delete, data: { confirm: 'Are you sure?'} if logged_in?(:site_admin)
+%>
