Uradjen ceo design

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,22 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Blogs</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Date</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<main role="main" class="container">
+  <%= link_to("Create new Item", new_blog_path, class: 'btn btn-default space m-5') if logged_in?(:site_admin) %> 
+<div class="row">
+  <div class="col-md-8 blog-main">
+    <%= paginate @blogs %>
     <%= render @blogs %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin)%>
+    <%= paginate @blogs %>
+  </div><!-- /.blog-posts -->
+  <%= render 'shared/blog_sidebar' %>
+</div><!-- /.row -->
+</main><!-- /.container -->
