--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,6 +1,8 @@
-<h1>Create a new Portfolio item</h1>
-
-  <%= render "form", portfolio_item: @portfolio_item %>
+<div class="container portfolio-form">
+  <h1>Make a new form</h1>
+        <%= render "form", portfolio_item: @portfolio_item %>
+</div>
+  
  
 
 
