--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,8 +1,10 @@
-<tr>
-  <td><%= blog.title %></td>
-  <td>Published <%= distance_of_time_in_words blog.created_at, Time.now %> ago</td>
-  <td><%= blog.body %></td>
-  <td><%= link_to 'Show', blog %></td>
-  <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin)%></td>
-  <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin)%></td>
-</tr>
+
+<%#= link_to 'New Blog', new_blog_path if logged_in?(:site_admin)%>
+<div class="blog-post">
+      <h2 class="blog-post-title"><%= link_to blog.title, blog_path(blog) %></h2>
+      <p class="blog-post-meta">Published <%=distance_of_time_in_words blog.created_at, Time.now %> ago.</p>
+      <p><%= blog.body %></p>
+      <p>
+        <%= link_to "Delete blog", blog_path(blog), method: :delete, data: {confirm: "Are you Sure"} if logged_in?(:site_admin)%>
+      </p>
+</div>
