--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -3,19 +3,16 @@
   <head>
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <meta name = "keywords" content="<%= @seo_skeywords %>" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'blog', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    
-    <%= login_helper %>
+    <%= render "shared/blog_nav" %>
     <%= yield %>
-    <%= render "shared/nav", location: 'bottom' %>
+    <%= render "shared/blog_footer" %>
     <%= source_helper("blog") %>
   </body>
 </html>
