--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <meta name = "keywords" content="<%= @seo_skeywords %>" />
     <%= stylesheet_link_tag 'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    
+  <%= render 'shared/portfolio_nav' %>
+  <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
-    <%= render "shared/nav", location: 'top' %>
-    <%= login_helper %>
+
+
+
     <%= yield %>
+
+    <%= render 'shared/portfolio_footer' %>
     <%= source_helper("application") %>
   </body>
 </html>
