--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit this Portfolio item</h1>
-
-<%= render "form", portfolio_item: @portfolio_item %>
+<div class="container portfolio-form">
+  <h1>Edit the form</h1>
+    <%= render "form", portfolio_item: @portfolio_item %>
+</div>
+  
