--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,9 +1,20 @@
-<h1>Show</h1>
-<%=  image_tag @portfolio_item.main_image %>
-<h1><%= @portfolio_item.title %></h1>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body %></p>
-<h2>Techonoliges used:</h2>
-<% @portfolio_item.technologies.each do |t| %>
-<p> <%= t.name %> </p>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+    <%=  image_tag @portfolio_item.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
+      <hr>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
+      <hr>
+      <h3>Techonoliges used:</h3>
+      <% @portfolio_item.technologies.each do |t| %>
+      <p> <%= t.name %> </p>
+      <% end %>
+
+      <%= link_to 'View all Portfolio items', portfolios_path %>
+    </div>
+  </div>
+</div>
