--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="row">
+  <div class = "col-md-4">
+    <%= image_tag "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4bec-SbCJWSm7k4VJuhhqNzX9HrYLKtMLTOINwpg_3svG8ui", width: 230, height:230 %>
+  </div>
+  <div class = "col-md-8">
+    <p>With over a decade of development experience in number of industries I realized that the typical product creation process between clients and developers was flawed. All too often developers rarely communicate to clients throught the development stage, resulting in a final product that fails to reach the goal sought by the customer and end user.</p>
+  </div>
+</div>
