--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: 'form-control'%>
+    <%#= form.label :title %>
+    <%= form.text_field :title, class: 'form-control', placeholder: 'Title' %>
   </div>
   <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, class: 'form-control', rows: 15 %>
+    <%#= form.label :body %>
+    <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: 'Body'  %>
   </div>
 
   <div class="form-group">
