--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -27,10 +27,10 @@
 
     <div>
       <%= form.fields_for :technologies do |technology_form| %>
-      <div class="form-group">
-        <%= technology_form.label :name %>
-        <%= technology_form.text_field :name, class: 'form-control' %>
-      </div>
+        <%= render 'tehnology_fields', f: technology_form %>
+        <div>
+          <%= link_to_add_association 'Add Technology', f, :technologies %>
+        </div>
       <% end %>
     </div>
 
