--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -13,8 +13,13 @@
       <% @portfolio_item.technologies.each do |t| %>
       <p> <%= t.name %> </p>
       <% end %>
-
+      <%= if logged_in?(site_admin) %>
+        <div>
+          <%= link_to "Edit Item", edit_portfolio_path(@portfolio_item), class: 'btn btn-warning' %>
+        </div>
+      <% end %>
       <%= link_to 'View all Portfolio items', portfolios_path %>
+
     </div>
   </div>
 </div>
