--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -13,6 +13,7 @@
     <%= render "shared/blog_nav" %>
     <%= yield %>
     <%= render "shared/blog_footer" %>
+    <%= alerts %>
     <%= source_helper("blog") %>
   </body>
 </html>
