--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container portfolio-form">
   <h1>Edit the form</h1>
-    <%= render "form", portfolio_item: @portfolio_item %>
+    <%= render "form", portfolio: @portfolio_item %>
 </div>
   
