--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container portfolio-form">
   <h1>Make a new form</h1>
-        <%= render "form", portfolio_item: @portfolio_item %>
+    <%= render 'form', portfolio: @portfolio_item %>
 </div>
   
  
